[gd_scene load_steps=12 format=3 uid="uid://dv0wi2aar7c6i"]

[ext_resource type="Texture2D" uid="uid://bp2yfbhjfrbc4" path="res://assets/patterns/stripes_duotone.png" id="1"]
[ext_resource type="PackedScene" uid="uid://c1duhx14s1f2t" path="res://actors/environments/Field.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://dklcu0w0amosq" path="res://assets/sprites/environments/no_ship.png" id="3"]
[ext_resource type="PackedScene" path="res://combat/traits/Dropper.tscn" id="4"]
[ext_resource type="Script" uid="uid://b3ljiemd41lve" path="res://actors/environments/NoShipZone.gd" id="5"]
[ext_resource type="AudioStream" uid="uid://62ym2mowjaop" path="res://assets/audio/FX/87044__runnerpack__weapcollect.wav" id="6"]
[ext_resource type="Texture2D" uid="uid://byto6clo1t1lm" path="res://assets/patterns/wall/dashed_line.png" id="7"]

[sub_resource type="ConvexPolygonShape2D" id="6"]
points = PackedVector2Array(-400, 4.89859e-14, -7.34788e-14, -400, 400, -9.79717e-14, 2.44929e-14, 400, -400, 4.89859e-14)

[sub_resource type="ConvexPolygonShape2D" id="7"]
points = PackedVector2Array(-400, 4.89859e-14, -7.34788e-14, -400, 400, -9.79717e-14, 2.44929e-14, 400, -400, 4.89859e-14)

[sub_resource type="ParticleProcessMaterial" id="5"]
resource_local_to_scene = true
emission_shape = 2
emission_sphere_radius = 1.0
gravity = Vector3(0, 0, 0)
scale_min = 0.0
scale_max = 0.0

[sub_resource type="Animation" id="4"]
resource_local_to_scene = true
resource_name = "Feedback"
length = 2.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FeedbackLine:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [20.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FeedbackLine:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.4, 1.4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("FeedbackLine:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1.5, 1.5, 1.5, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("NoShipSign:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.7, 1, 1.3, 1.6, 1.9, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(0.2, 0.203333, 0.4, 1), Color(1, 1, 1, 1), Color(0.2, 0.203333, 0.4, 1), Color(1, 1, 1, 1), Color(0.2, 0.203333, 0.4, 1), Color(1, 1, 1, 1), Color(0.2, 0.203922, 0.4, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Polygon2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.441912, 0.0509805, 1.30196, 1), Color(0.337255, 0.411765, 0.8, 0.619608)]
}

[node name="NoShipZone" instance=ExtResource("2")]
script = ExtResource("5")
type = 4
symbol_scale = 2.0

[node name="IsoPolygon" parent="." index="0"]
modulate = Color(1, 1, 1, 1)
color = Color(0.2, 0.2, 0.4, 1)

[node name="Polygon2D" parent="." index="1"]
modulate = Color(0.337255, 0.411765, 0.8, 0.619608)
texture = ExtResource("1")
texture_scale = Vector2(0.25, 0.25)
polygon = PackedVector2Array(2.44929e-14, 400, -400, 4.89859e-14, -7.34788e-14, -400, 400, -9.79717e-14)

[node name="Line2D" parent="." index="2"]
modulate = Color(0.55, 0.75, 1.15, 1)
points = PackedVector2Array(2.44929e-14, 400, -400, 4.89859e-14, -7.34788e-14, -400, 400, -9.79717e-14, 2.44929e-14, 400)
texture = ExtResource("7")
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Dropper" parent="Area2D" index="0" instance=ExtResource("4")]

[node name="CollisionShape2D" parent="Area2D" index="2"]
shape = SubResource("6")

[node name="CrownCollider" parent="." index="4"]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" parent="CrownCollider" index="0"]
shape = SubResource("7")

[node name="GPUParticles2D" parent="." index="5"]
process_material = SubResource("5")

[node name="FeedbackLine" type="Line2D" parent="." index="7"]
visible = false
scale = Vector2(1.4, 1.4)
points = PackedVector2Array(2.44929e-14, 400, -400, 4.89859e-14, -7.34788e-14, -400, 400, -9.79717e-14, 2.44929e-14, 400)
width = 0.0
default_color = Color(1.5, 1.5, 1.5, 1)
texture_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="8"]
playback_speed = 1.2
anims/Feedback = SubResource("4")

[node name="NoShipSign" type="Sprite2D" parent="." index="9"]
modulate = Color(0.2, 0.203333, 0.4, 1)
position = Vector2(-12, -16)
scale = Vector2(1.5, 1.5)
z_index = 10
z_as_relative = false
texture = ExtResource("3")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="10"]
stream = ExtResource("6")
